test/valid/List/TestListInsert.plume
/**
 * A class to test the insert method
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: TestListInsert.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class TestListInsert extends Object is

  method main : () -> String is
    new Empty().insert(23).insert(3).insert(7).insert(73).insert(9)
		.insert(0).insert(-8).insert(323).insert(-23).toString()
	// expected output: "-23 :: 323 :: -8 :: 0 :: 9 :: 73 :: 7 :: 3 :: 23 :: []"